--- a/index.html
+++ b/index.html
@@ -1,261 +1,140 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
-
-    <meta charset="UTF-8">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Student Registration Form</title>
-
-    <style>
-
-        body {
-
-            font-family: sans-serif;
-
-            background-color: #f0f0f0;
-
-            display: flex;
-
-            justify-content: center;
-
-            align-items: center;
-
-            padding: 20px;
-
-        }
-
-        form {
-
-            background-color: white;
-
-            padding: 20px;
-
-            border-radius: 8px;
-
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-
-            max-width: 500px;
-
-            width: 100%;
-
-        }
-
-        h1 {
-
-            text-align: center;
-
-            color: #333;
-
-        }
-
-        div {
-
-            margin-bottom: 15px;
-
-        }
-
-        label {
-
-            display: block;
-
-            margin-bottom: 5px;
-
-            font-weight: bold;
-
-        }
-
-        input[type="text"],
-
-        input[type="email"],
-
-        input[type="password"],
-
-        input[type="tel"],
-
-        input[type="date"],
-
-        select {
-
-            width: 100%;
-
-            padding: 8px;
-
-            border: 1px solid #ccc;
-
-            border-radius: 4px;
-
-            box-sizing: border-box; /* Important for padding and width */
-
-        }
-
-        button {
-
-            width: 100%;
-
-            padding: 10px;
-
-            background-color: #007BFF;
-
-            color: white;
-
-            border: none;
-
-            border-radius: 4px;
-
-            cursor: pointer;
-
-            font-size: 16px;
-
-        }
-
-        button:hover {
-
-            background-color: #0056b3;
-
-        }
-
-        #success-message {
-
-            text-align: center;
-
-            color: green;
-
-            margin-top: 10px;
-
-            font-weight: bold;
-
-        }
-
-        .error-message {
-
-            color: red;
-
-            font-size: 0.9em;
-
-            height: 1em; /* Reserve space */
-
-        }
-
-    </style>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Student Registration Form</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      background-color: #f0f0f0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+    }
+    form {
+      background-color: white;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      max-width: 500px;
+      width: 100%;
+    }
+    h1 {
+      text-align: center;
+      color: #333;
+    }
+    div {
+      margin-bottom: 15px;
+    }
+    label {
+      display: block;
+      margin-bottom: 5px;
+      font-weight: bold;
+    }
+    input[type="text"],
+    input[type="email"],
+    input[type="password"],
+    input[type="tel"],
+    input[type="date"],
+    select {
+      width: 100%;
+      padding: 8px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-sizing: border-box;
+    }
+    button {
+      width: 100%;
+      padding: 10px;
+      background-color: #007BFF;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 16px;
+    }
+    button:hover {
+      background-color: #0056b3;
+    }
+    #success-message {
+      text-align: center;
+      color: green;
+      margin-top: 10px;
+      font-weight: bold;
+    }
+    .error-message {
+      color: red;
+      font-size: 0.9em;
+      height: 1em; /* Reserve space */
+    }
+  </style>
 </head>
-
 <body>
-
-    <form id="registrationForm">
-
-        <h1>Student Registration</h1>
-
-        
-
-        <div>
-
-            <label for="fullName">Full Name</label>
-
-            <input type="text" id="fullName" name="fullName">
-
-        </div>
-
-
-
-        <div>
-
-            <label for="email">Email Address</label>
-
-            <input type="email" id="email" name="email">
-
-        </div>
-
-
-
-        <div>
-
-            <label for="password">Password</label>
-
-            <input type="password" id="password" name="password">
-
-        </div>
-
-
-
-        <div>
-
-            <label for="confirmPassword">Confirm Password</label>
-
-            <input type="password" id="confirmPassword" name="confirmPassword">
-
-        </div>
-
-        
-
-        <div>
-
-            <label for="phone">Phone Number</label>
-
-            <input type="tel" id="phone" name="phone">
-
-        </div>
-
-
-
-        <div>
-
-            <label for="dob">Date of Birth</label>
-
-            <input type="date" id="dob" name="dob">
-
-        </div>
-
-
-
-        <div>
-
-            <label for="course">Select Course</label>
-
-            <select id="course" name="course">
-
-                <option value="">--Please choose a course--</option>
-
-                <option value="cs">Computer Science</option>
-
-                <option value="ee">Electrical Engineering</option>
-
-                <option value="me">Mechanical Engineering</option>
-
-                <option value="ce">Civil Engineering</option>
-
-            </select>
-
-        </div>
-
-
-
-        <div>
-
-            <input type="checkbox" id="terms" name="terms">
-
-            <label for="terms" style="display: inline;">I agree to the Terms and Conditions</label>
-
-        </div>
-
-
-
-        <div id="success-message"></div>
-
-
-
-        <button type="submit">Register</button>
-
-    </form>
-
-
-
-    <script src="validation.js"></script>
-
+  <form id="registrationForm">
+    <h1>Student Registration</h1>
+    
+    <div>
+      <label for="fullName">Full Name</label>
+      <input type="text" id="fullName" name="fullName" required>
+      <div class="error-message" id="nameError"></div>
+    </div>
+
+    <div>
+      <label for="email">Email Address</label>
+      <input type="email" id="email" name="email" required>
+      <div class="error-message" id="emailError"></div>
+    </div>
+
+    <div>
+      <label for="password">Password</label>
+      <input type="password" id="password" name="password" required>
+      <div class="error-message" id="passwordError"></div>
+    </div>
+
+    <div>
+      <label for="confirmPassword">Confirm Password</label>
+      <input type="password" id="confirmPassword" name="confirmPassword" required>
+      <div class="error-message" id="confirmPasswordError"></div>
+    </div>
+    
+    <div>
+      <label for="phone">Phone Number</label>
+      <input type="tel" id="phone" name="phone" required>
+      <div class="error-message" id="phoneError"></div>
+    </div>
+
+    <div>
+      <label for="dob">Date of Birth</label>
+      <input type="date" id="dob" name="dob" required>
+      <div class="error-message" id="dobError"></div>
+    </div>
+
+    <div>
+      <label for="course">Select Course</label>
+      <select id="course" name="course" required>
+        <option value="">--Please choose a course--</option>
+        <option value="cs">Computer Science</option>
+        <option value="ee">Electrical Engineering</option>
+        <option value="me">Mechanical Engineering</option>
+        <option value="ce">Civil Engineering</option>
+      </select>
+      <div class="error-message" id="courseError"></div>
+    </div>
+
+    <div>
+      <input type="checkbox" id="terms" name="terms" required>
+      <label for="terms" style="display: inline;">I agree to the Terms and Conditions</label>
+      <div class="error-message" id="termsError"></div>
+    </div>
+
+    <div id="success-message"></div>
+
+    <button type="submit">Register</button>
+  </form>
+
+  <!-- Link external JS -->
+  <script src="validation.js"></script>
 </body>
-
-</html>
+  </html>
